fix: blurry canvas

--- a/src/app.css
+++ b/src/app.css
@@ -25,6 +25,7 @@
 canvas {
   width: 100%;
   height: 100%;
+  image-rendering: crisp-edges;
 }
 
 button {
@@ -54,15 +55,16 @@ button:active {
 .menu-island {
   display: flex;
   flex-direction: row;
+  align-items: center;
   background: var(--background-color-2);
   padding: 0.5rem;
   border-radius: 0.5rem;
 }
 
 .menu-separator {
-  width: 100%;
-  height: 1px;
-  margin: 0.5rem 0;
+  height: 100%;
+  width: 1px;
+  margin: 0.5rem 0.5rem;
   background-color: var(--border-color-1);
 }
 
